# nhl_dw

./: .gitignore  .sqlfluff  .user.yml  .~lock.Track.xlsx#  README ENGLISH.md  README.md  Track.xlsx  clear_null_files.py  dbt_project.yml  game_logs.csv  insert_name.py  models.yml  profiles.yml  pyproject.toml  raw_2024020748_details.json  rename.py  tabelas uteis  testando_json.csv
app/: all_game_logs_till_2025.csv  all_games_till_2025-01-29-1738417698075.csv  all_games_till_2025-01-29.csv  generic_fetch_results.py
app/api_parameters/: active_playerid.csv  boxscore_gameids.csv  gamedetails_gameids.csv  parameters_generator.py  playbyplays_gameids.csv  season_ids.csv  season_ids_gametypes_ids.csv  seasonid_teamid_game_type.csv
app/extraction/: generic_get_results.py  get_all.py  get_single_output.py
app/file_processing/: json_parser.py  parameters_maker.py
app/loading/: data_loader.py  data_loader_duckdb.py  generic_data_loader.py
app/raw_all_club_stats_ETL/: pipeline.py
app/raw_all_game_log_ETL/: extraction.py  pipeline.py
app/raw_all_goalies_stats_ETL/: extraction.py  pipeline.py
dbt_nhl/: .gitignore
logs/: function_execution_log.csv
modelos/: int_dime_player.sql  int_dime_player_current_stats.sql  int_fct_play_by_play.sql  int_fct_player_games.sql  stg_csv__parameters_team_seasons_types.sql  stg_csv__parameters_teams_seasons.sql
src/: logger.py
tests/: json_parser.py  raw_stats_club_ANA_20182019_2.csv  raw_stats_club_ANA_20182019_2.json  raw_stats_club_ANA_20182019_2_goalies.csv  rename.py  test_get_all.py
utils/: time_tracker.py
(+91 files in other folders)
