[tool.poetry]
name = "nhl-dw"
version = "0.1.0"
description = ""
authors = ["lksprado <lks-prado@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.9.1"
dbt-postgres = "^1.9.0"
requests = "^2.32.3"
polars = "^1.19.0"
flatten-json = "^0.1.14"
pandas = "^2.2.3"
flatdict = "^4.0.1"
pytest = "^8.3.4"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"
taskipy = "^1.14.1"
pandera = "^0.22.1"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.taskipy.tasks]
format = """
isort . 
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """ python3 app/main.py """
doc = "mkdocs serve"

